--- a/Customer/delete.html
+++ b/Customer/delete.html
@@ -7,7 +7,7 @@
 
 <body>
     <form method="post" action="Php/Deleted.php">
-        <label>Enter the customer_id to be delete</label>
+        <label>Enter the customer_id to be deleted</label>
         <br><input type="text" name="delete">
         <br><input type="submit">
     </form>
